--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>gulimall-common</module>
         <module>gulimall-search</module>
         <module>gulimall-auth-server</module>
+        <module>gulimall-cart</module>
+        <module>gulimall-seckill</module>
     </modules>
     
     <build>
